Fix sidebar issues: text alignment, overflow, hidden folders, manage folders link

--- a/cms/server/admin/static/aws_style.css
+++ b/cms/server/admin/static/aws_style.css
@@ -119,7 +119,7 @@ ul.normal_list {
 /* LEFT */
 
 #sidebar {
-    text-align: right;
+    text-align: left;
     position: fixed;
     padding: 0 1em;
     width: 234px;
@@ -128,6 +128,7 @@ ul.normal_list {
     height: 100%;
     border-right: 2px solid #E4E5E8;
     overflow-y: auto;
+    padding-bottom: 4em;
 }
 
 #sidebar_header {
@@ -397,8 +398,8 @@ body.admin .sidebar-contest a, body.admin .sidebar-item a {
     font-size: 0.6em;
     line-height: 1.125em;
     text-align: center;
-    position: fixed;
-    bottom: 1.5em;
+    margin-top: 2em;
+    margin-bottom: 1em;
     width: 200px;
     margin-left: 15px;
 }
